making macros compatible with baseline project

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,9 @@ CC = gcc
 CFLAGS=-Wall -Wextra
 TARGET=program
 
+all:
+	$(CC) $(CFLAGS) *.c utils/logging.c -o $(TARGET)
+
 task1:
 	$(CC) $(CFLAGS) -D TASK1 *.c utils/logging.c -o $(TARGET)
 
