--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,39 @@
 CC = gcc
 CFLAGS=-Wall -Wextra
-TARGET=program
 
-all:
-	$(CC) $(CFLAGS) *.c utils/logging.c -o $(TARGET)
+SOURCES  := $(wildcard */*.c)
+HEADERS  := $(wildcard */*.h)
+OBJECTS  := $(SOURCES:.c=.o)
 
-task1:
-	$(CC) $(CFLAGS) -D TASK1 *.c utils/logging.c -o $(TARGET)
+TARGET_EXECS := l1_cache/TASK1 l2_cache/TASK2 l2_cache_2w/TASK3
 
-task2:
-	$(CC) $(CFLAGS) -D TASK2 *.c utils/logging.c -o $(TARGET)
+l1_cache/TASK1: $(TASK1_OBJECTS) $(UTILS_OBJECTS)
+    $(CC) $(CFLAGS) -o $@ $^
 
-task3:
-	$(CC) $(CFLAGS) -D TASK3 *.c utils/logging.c -o $(TARGET)
+l2_cache/TASK2: $(TASK2_OBJECTS) $(UTILS_OBJECTS)
+    $(CC) $(CFLAGS) -o $@ $^
 
-clean:
-	rm $(TARGET)
+l2_cache_2w/TASK3: $(TASK3_OBJECTS) $(UTILS_OBJECTS)
+    $(CC) $(CFLAGS) -o $@ $^
+
+TASK1_SOURCES := $(wildcard l1_cache/*.c)
+TASK2_SOURCES := $(wildcard l2_cache/*.c)
+TASK3_SOURCES := $(wildcard l2_cache_2w/*.c)
+UTILS_SOURCES  := $(wildcard utils/*.c)
+
+TASK1_OBJECTS := $(TASK1_SOURCES:.c=.o)
+TASK2_OBJECTS := $(TASK2_SOURCES:.c=.o)
+TASK3_OBJECTS := $(TASK3_SOURCES:.c=.o)
+UTILS_OBJECTS  := $(UTILS_SOURCES:.c=.o)
+
+vpath # clears VPATH
+vpath %.h $(INCLUDE_DIRS)
+
+
+all: $(TARGET_EXECS)
+
+l1_cache/TASK1: $(TASK1_OBJECTS) $(UTILS_OBJECTS)
+l2_cache/TASK2: $(TASK2_OBJECTS) $(UTILS_OBJECTS)
+l2_cache_2w/TASK3: $(TASK3_OBJECTS) $(UTILS_OBJECTS)
+
+
