added new and improved make file

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,26 +1,24 @@
 CC = gcc
 CFLAGS=-Wall -Wextra
 
+INCLUDE_DIRS := l1_cache l2_cache l2_cache_2w .
+INCLUDES = $(addprefix -I, $(INCLUDE_DIRS))
+
+CFLAGS += $(INCLUDES)
+
 SOURCES  := $(wildcard */*.c)
 HEADERS  := $(wildcard */*.h)
 OBJECTS  := $(SOURCES:.c=.o)
 
 TARGET_EXECS := l1_cache/TASK1 l2_cache/TASK2 l2_cache_2w/TASK3
 
-l1_cache/TASK1: $(TASK1_OBJECTS) $(UTILS_OBJECTS)
-    $(CC) $(CFLAGS) -o $@ $^
-
-l2_cache/TASK2: $(TASK2_OBJECTS) $(UTILS_OBJECTS)
-    $(CC) $(CFLAGS) -o $@ $^
-
-l2_cache_2w/TASK3: $(TASK3_OBJECTS) $(UTILS_OBJECTS)
-    $(CC) $(CFLAGS) -o $@ $^
-
+CLIENT_SOURCE := SimpleProgram.c
 TASK1_SOURCES := $(wildcard l1_cache/*.c)
 TASK2_SOURCES := $(wildcard l2_cache/*.c)
 TASK3_SOURCES := $(wildcard l2_cache_2w/*.c)
 UTILS_SOURCES  := $(wildcard utils/*.c)
 
+CLIENT_OBJECTS := SimpleProgram.o
 TASK1_OBJECTS := $(TASK1_SOURCES:.c=.o)
 TASK2_OBJECTS := $(TASK2_SOURCES:.c=.o)
 TASK3_OBJECTS := $(TASK3_SOURCES:.c=.o)
@@ -29,11 +27,16 @@ UTILS_OBJECTS  := $(UTILS_SOURCES:.c=.o)
 vpath # clears VPATH
 vpath %.h $(INCLUDE_DIRS)
 
-
 all: $(TARGET_EXECS)
 
-l1_cache/TASK1: $(TASK1_OBJECTS) $(UTILS_OBJECTS)
-l2_cache/TASK2: $(TASK2_OBJECTS) $(UTILS_OBJECTS)
-l2_cache_2w/TASK3: $(TASK3_OBJECTS) $(UTILS_OBJECTS)
+l1_cache/TASK1: $(TASK1_OBJECTS) $(UTILS_OBJECTS) $(CLIENT_OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $^
+l2_cache/TASK2: $(TASK2_OBJECTS) $(UTILS_OBJECTS) $(CLIENT_OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $^
+l2_cache_2w/TASK3: $(TASK3_OBJECTS) $(UTILS_OBJECTS) $(CLIENT_OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $^
 
+clean:
+	rm -f $(OBJECTS) $(TARGET_EXECS)
 
+.PHONY: clean
