--- a/src/Makefile
+++ b/src/Makefile
@@ -10,15 +10,18 @@ SOURCES  := $(wildcard */*.c)
 HEADERS  := $(wildcard */*.h)
 OBJECTS  := $(SOURCES:.c=.o)
 
-TARGET_EXECS := l1_cache/TASK1 l2_cache/TASK2 l2_cache_2w/TASK3
+TARGET_EXECS := prof_l1_cache/TASK0 l1_cache/TASK1 l2_cache/TASK2 l2_cache_2w/TASK3 
 
 CLIENT_SOURCE := SimpleProgram.c
+TASK0_SOURCES := $(wildcard prof_l1_cache/*.c)
 TASK1_SOURCES := $(wildcard l1_cache/*.c)
 TASK2_SOURCES := $(wildcard l2_cache/*.c)
 TASK3_SOURCES := $(wildcard l2_cache_2w/*.c)
 UTILS_SOURCES  := $(wildcard utils/*.c)
 
 CLIENT_OBJECTS := SimpleProgram.o
+
+TASK0_OBJECTS := $(TASK0_SOURCES:.c=.o)
 TASK1_OBJECTS := $(TASK1_SOURCES:.c=.o)
 TASK2_OBJECTS := $(TASK2_SOURCES:.c=.o)
 TASK3_OBJECTS := $(TASK3_SOURCES:.c=.o)
@@ -41,6 +44,8 @@ vpath %.h $(INCLUDE_DIRS)
 
 all: $(TARGET_EXECS)
 
+prof_l1_cache/TASK0: $(TASK0_OBJECTS) $(UTILS_OBJECTS) $(CLIENT_OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $^
 l1_cache/TASK1: $(TASK1_OBJECTS) $(UTILS_OBJECTS) $(CLIENT_OBJECTS)
 	$(CC) $(CFLAGS) -o $@ $^
 l2_cache/TASK2: $(TASK2_OBJECTS) $(UTILS_OBJECTS) $(CLIENT_OBJECTS)
